# hps_decode

./: Cargo.toml  HPS-LAYOUT.md  LICENSE  README.md
.github/workflows/: ci.yml
benches/: hps_decode.rs
examples/: README.md  audio_playback.rs
src/: decoded_hps.rs  decoded_hps_rodio_source.rs  errors.rs  hps.rs  interleaving_iterator.rs  lib.rs  parser.rs  parsers.rs  pcm_iterator.rs  types.rs
test-data/: corrupt-dsp-frame-header.hps  short-last-block-with-loop.hps  test-song.hps
