[package]
name = "hps_decode"
description = "A library for parsing and decoding Super Smash Bros. Melee music files"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/DarylPinto/hps_decode"
readme = "README.md"
exclude = ["/test-data"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
nom = "7.1.3"
rayon = "1.7.0"
rodio = { version = "0.17.1", default-features = false, optional = true }
thiserror = "1.0.40"

[features]
rodio-source = ["dep:rodio"]
