[package]
name = "hps_decode"
description = "A library for parsing and decoding Super Smash Bros. Melee music files"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/DarylPinto/hps_decode"
readme = "README.md"
exclude = ["/test-data", "benches"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
rayon = "1.10.0"
rodio = { version = "0.*", default-features = false, optional = true }
thiserror = "1.0.63"
winnow = "0.6.18"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[features]
rodio-source = ["dep:rodio"]

[[bench]]
name = "hps_decode"
harness = false
