[package]
name = "hps_decode"
description = "A library for parsing and decoding Super Smash Bros. Melee music files"
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/DarylPinto/hps_decode"
readme = "README.md"
include = [
	"/src/**",
	"/Cargo.toml",
	"/Cargo.lock",
	"/README.md",
	"/HPS-LAYOUT.md",
	"/LICENSE",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
rayon = "1.11.0"
rodio = { version = "0.*", default-features = false, optional = true }
thiserror = "2.0.16"
winnow = "0.7.13"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
rodio = { version = "0.*", default-features = false, features = ["playback"] }

[features]
rodio-source = ["dep:rodio"]

[[bench]]
name = "hps_decode"
harness = false
